--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,3 +23,4 @@ jobs:
       AWS_REGION: ${{ secrets.AWS_REGION }}
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      KUBE_CONFIG_PROD: ${{ secrets.KUBE_CONFIG_PROD }}
