--- a/python-app/values.yaml
+++ b/python-app/values.yaml
@@ -1,36 +1,25 @@
-# Default values for python-app.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
+# values.yaml
 
 replicaCount: 1
 
 image:
-  repository: nginx
+  repository: 445567111188.dkr.ecr.us-east-1.amazonaws.com/python
+  tag: "latest"
   pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
 
 ingress:
   enabled: false
   className: ""
   annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
   hosts:
     - host: chart-example.local
       paths:
         - path: /
           pathType: ImplementationSpecific
   tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
 
 resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+  # Uncomment and set values if needed.
   # limits:
   #   cpu: 100m
   #   memory: 128Mi
