--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   Templates:
-    uses: arjunpt/argo-eks/blob/main/.github/workflows/cicd.yml@main
+    uses: arjunpt/argo-eks/.github/workflows/cicd.yml@main
     with:
       python-version: "3.10"
       requirements-path: "src/requirements.txt"
