--- a/python-app/values.yaml
+++ b/python-app/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 1
 
 image:
   repository: 445567111188.dkr.ecr.us-east-1.amazonaws.com/python
-  tag: "latest"
+  tag: "11858083288"
   pullPolicy: IfNotPresent
 
 ingress:
