--- a/manifest/deployment.yaml
+++ b/manifest/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: python-web-app
-        image: 445567111188.dkr.ecr.us-east-1.amazonaws.com/python:latest
+        image: 445567111188.dkr.ecr.us-east-1.amazonaws.com/python:11898592330
         ports:
         - containerPort: 5000 #port on docker file 
